ADD create/edit macro category
